--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,6 +6,7 @@
 
 body {
   margin: 0;
+  padding: 0 15px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -16,7 +17,7 @@ body {
 }
 
 p {
-  font-size: 18px;
+  font-size: 12px;
   margin-top: 0;
   margin: 10px;
   margin-left: 0;
@@ -25,6 +26,7 @@ p {
 .form-wrap {
   display: flex;
   height: 60px;
+  margin-bottom: 15px;
   background-color: blue;
 }
 
@@ -58,6 +60,19 @@ p {
   cursor: pointer;
 }
 
+/* button */
+.load-more {
+  display: flex;
+  margin: 10px auto;
+  padding: 10px 15px;
+  background: blue;
+  color: white;
+  font-size: 17px;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
 /* .search-form::after {
   content: '';
   clear: both;
@@ -66,35 +81,37 @@ p {
 
 .gallery {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(4, auto);
-  /* grid-auto-rows: minmax(1%, auto); */
-  row-gap: 70px;
-  column-gap: 20px;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-template-rows: repeat(auto-fill, auto);
+  row-gap: 15px;
+  column-gap: 15px;
+  grid-auto-flow: dense;
   /* padding-bottom: 100px; */
 }
 
 .photo-card img {
-  max-width: 569px;
-  max-height: 350px;
+  display: flex;
   width: 100%;
   height: 100%;
+  max-height: 200px;
+
   object-fit: cover;
 }
 
 .info {
   display: flex;
   padding: 10px;
+  border: 1px solid grey;
 }
 
 .info-item {
   display: flex;
   flex-direction: column;
-  flex-basis: 90px;
+  /* flex-basis: */
   text-align: center;
   /* text-align: center; */
 }
 
 .info-item:not(:last-child) {
-  margin-right: 70px;
+  margin-right: 20px;
 }
