--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,9 +18,8 @@ body {
 
 p {
   font-size: 12px;
-  margin-top: 0;
-  margin: 10px;
-  margin-left: 0;
+  font-weight: 500;
+  margin: 0;
 }
 
 .form-wrap {
@@ -82,8 +81,8 @@ p {
 .gallery {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  grid-template-rows: repeat(auto-fill, auto);
-  row-gap: 15px;
+  /* grid-template-rows: repeat(auto-fill, auto); */
+  row-gap: 35px;
   column-gap: 15px;
   grid-auto-flow: dense;
   /* padding-bottom: 100px; */
@@ -102,16 +101,14 @@ p {
   display: flex;
   padding: 10px;
   border: 1px solid grey;
+  justify-content: space-between;
 }
 
 .info-item {
-  display: flex;
-  flex-direction: column;
-  /* flex-basis: */
   text-align: center;
-  /* text-align: center; */
+  justify-content: space-evenly;
 }
 
-.info-item:not(:last-child) {
+/* .info-item:not(:last-child) {
   margin-right: 20px;
-}
+} */
