--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -81,6 +81,7 @@ p {
 
 .gallery {
   display: grid;
+  height: 100%;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   /* grid-template-rows: repeat(auto-fill, auto); */
   row-gap: 35px;
